--- a/stylesheets/breakpoint/_helpers.scss
+++ b/stylesheets/breakpoint/_helpers.scss
@@ -3,19 +3,20 @@
 //////////////////////////////
 
 @use "sass:math";
+@use "settings";
 
 @function breakpoint-to-base-em($value) {
   $value-unit: unit($value);
 
   // Will convert relative EMs into root EMs.
-  @if breakpoint-get('base font size') and type-of(breakpoint-get('base font size')) == 'number' and $value-unit == 'em' {
-    $base-unit: unit(breakpoint-get('base font size'));
+  @if settings.breakpoint-get('base font size') and type-of(settings.breakpoint-get('base font size')) == 'number' and $value-unit == 'em' {
+    $base-unit: unit(settings.breakpoint-get('base font size'));
 
     @if $base-unit == 'px' or $base-unit == '%' or $base-unit == 'em' or $base-unit == 'pt' {
-      @return math.div(base-conversion($value), base-conversion(breakpoint-get('base font size'))) * 1em;
+      @return math.div(base-conversion($value), base-conversion(settings.breakpoint-get('base font size'))) * 1em;
     }
     @else {
-      @warn '#{breakpoint-get(\'base font size\')} is not set in valid units for font size!';
+      @warn '#{settings.breakpoint-get(\'base font size\')} is not set in valid units for font size!';
       @return false;
     }
   }
@@ -140,7 +141,7 @@ $breakpoint-single-string-features: 'color',
 @function breakpoint-is-resolution($feature) {
   $resolutions: 'device-pixel-ratio', 'dpr';
 
-  @if breakpoint-get('transform resolutions') {
+  @if settings.breakpoint-get('transform resolutions') {
     $resolutions: append($resolutions, 'resolution');
   }
 
