--- a/stylesheets/breakpoint/_parsers.scss
+++ b/stylesheets/breakpoint/_parsers.scss
@@ -1,13 +1,19 @@
 //////////////////////////////
 // Import Parser Pieces
 //////////////////////////////
-@import "parsers/query";
-@import "parsers/single";
-@import "parsers/double";
-@import "parsers/triple";
-@import "parsers/resolution";
+@use "parsers/query";
+@use "parsers/single";
+@use "parsers/double";
+@use "parsers/triple";
+@use "parsers/resolution";
+@use "context";
+@use "helpers";
+@use "no-query";
+@use "settings";
+@use "../../node_modules/sassy-maps/sass/memo";
 
-$Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
+//$Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
+$Memo-Exists: false;
 
 //////////////////////////////
 // Breakpoint Function
@@ -18,7 +24,7 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
 
   // Grab the Memo Output if Memoization can be a thing
   @if $Memo-Exists {
-    $return: memo-get(breakpoint, breakpoint $query $contexts);
+    $return: memo.memo-get(breakpoint, breakpoint $query $contexts);
 
     @if $return != null {
       $run: false;
@@ -32,8 +38,8 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
     $return: ();
 
     // Reserve Global Private Breakpoint Context
-    $holder-context: $private-breakpoint-context-holder;
-    $holder-query-count: $private-breakpoint-query-count;
+    $holder-context: context.$private-breakpoint-context-holder;
+    $holder-query-count: context.$private-breakpoint-query-count;
 
     // Reset Global Private Breakpoint Context
     $private-breakpoint-context-holder: () !global;
@@ -44,20 +50,20 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
     $or-list: if(list-separator($query) == 'comma', true, false);
 
 
-    @if ($or-list == false and breakpoint-get('legacy syntax') == false) {
+    @if ($or-list == false and settings.breakpoint-get('legacy syntax') == false) {
       $query-string: breakpoint-parse($query);
     }
     @else {
       $length: length($query);
 
       $last: nth($query, $length);
-      $query-fallback: breakpoint-no-query($last);
+      $query-fallback: no-query.breakpoint-no-query($last);
 
       @if ($query-fallback != false) {
         $length: $length - 1;
       }
 
-      @if (breakpoint-get('legacy syntax') == true) {
+      @if (settings.breakpoint-get('legacy syntax') == true) {
         $mq: ();
 
         @for $i from 1 through $length {
@@ -81,11 +87,11 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
     );
     @if length($contexts) > 0 and nth($contexts, 1) != false {
       @if $query-fallback != false {
-        $context-setter: private-breakpoint-set-context('no-query', $query-fallback);
+        $context-setter: context.private-breakpoint-set-context('no-query', $query-fallback);
       }
       $context-map: ();
       @each $context in $contexts {
-        $context-map: map-merge($context-map, ($context: breakpoint-get-context($context)));
+        $context-map: map-merge($context-map, ($context: context.breakpoint-get-context($context)));
       }
       $return: map-merge($return, (context: $context-map));
     }
@@ -95,7 +101,7 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
     $private-breakpoint-query-count: 0 !global;
 
     @if $Memo-Exists {
-      $holder: memo-set(breakpoint, breakpoint $query $contexts, $return);
+      $holder: memo.memo-set(breakpoint, breakpoint $query $contexts, $return);
     }
   }
 
@@ -107,23 +113,23 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
 //////////////////////////////
 @function breakpoint-parse($query) {
   // Increase number of 'and' queries
-  $private-breakpoint-query-count: $private-breakpoint-query-count + 1 !global;
+  $private-breakpoint-query-count: context.$private-breakpoint-query-count + 1 !global;
 
   // Set up Media Type
   $query-print: '';
 
-  $force-all: ((breakpoint-get('force all media type') == true) and (breakpoint-get('default media') == 'all'));
+  $force-all: ((settings.breakpoint-get('force all media type') == true) and (settings.breakpoint-get('default media') == 'all'));
   $empty-media: true;
-  @if ($force-all == true) or (breakpoint-get('default media') != 'all') {
+  @if ($force-all == true) or (settings.breakpoint-get('default media') != 'all') {
     // Force the print of the default media type if (force all is true and default media type is all) or (default media type is not all)
-    $query-print: breakpoint-get('default media');
+    $query-print: settings.breakpoint-get('default media');
     $empty-media: false;
   }
 
 
   $query-resolution: false;
 
-  $query-holder: breakpoint-parse-query($query);
+  $query-holder: query.breakpoint-parse-query($query);
 
 
 
@@ -139,25 +145,25 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
       $feature: nth($feature, 1);
 
       // Media Type must by convention be the first item, so it's safe to flat override $query-print, which right now should only be the default media type
-      @if (breakpoint-is-media($feature)) {
+      @if (helpers.breakpoint-is-media($feature)) {
         @if ($force-all == true) or ($feature != 'all') {
           // Force the print of the default media type if (force all is true and default media type is all) or (default media type is not all)
           $query-print: $feature;
           $empty-media: false;
 
           // Set Context
-          $context-setter: private-breakpoint-set-context(media, $query-print);
+          $context-setter: context.private-breakpoint-set-context(media, $query-print);
         }
       }
       @else {
-        $parsed: breakpoint-parse-single($feature, $empty-media, $first);
+        $parsed: single.breakpoint-parse-single($feature, $empty-media, $first);
         $query-print: '#{$query-print} #{$parsed}';
         $first: false;
       }
     }
     // Parse a double feature
     @else if ($length == 2) {
-      @if (breakpoint-is-resolution($feature) != false) {
+      @if (helpers.breakpoint-is-resolution($feature) != false) {
         $query-resolution: $feature;
       }
       @else {
@@ -167,15 +173,15 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
         // then we parse it as a normal double
         $alpha: nth($feature, 1);
         $beta: nth($feature, 2);
-        @if breakpoint-single-string($alpha) or breakpoint-single-string($beta) {
-          $parsed: breakpoint-parse-single($alpha, $empty-media, $first);
+        @if helpers.breakpoint-single-string($alpha) or helpers.breakpoint-single-string($beta) {
+          $parsed: single.breakpoint-parse-single($alpha, $empty-media, $first);
           $query-print: '#{$query-print} #{$parsed}';
           $first: false;
-          $parsed: breakpoint-parse-single($beta, $empty-media, $first);
+          $parsed: single.breakpoint-parse-single($beta, $empty-media, $first);
           $query-print: '#{$query-print} #{$parsed}';
         }
         @else {
-          $parsed: breakpoint-parse-double($feature, $empty-media, $first);
+          $parsed: double.breakpoint-parse-double($feature, $empty-media, $first);
           $query-print: '#{$query-print} #{$parsed}';
           $first: false;
         }
@@ -183,7 +189,7 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
     }
     // Parse a triple feature
     @else if ($length == 3) {
-      $parsed: breakpoint-parse-triple($feature, $empty-media, $first);
+      $parsed: triple.breakpoint-parse-triple($feature, $empty-media, $first);
       $query-print: '#{$query-print} #{$parsed}';
       $first: false;
     }
@@ -191,24 +197,24 @@ $Memo-Exists: function-exists(memo-get) and function-exists(memo-set);
   }
 
   @if ($query-resolution != false) {
-    $query-print: breakpoint-build-resolution($query-print, $query-resolution, $empty-media, $first);
+    $query-print: resolution.breakpoint-build-resolution($query-print, $query-resolution, $empty-media, $first);
   }
 
   // Loop through each feature that's been detected so far and append 'false' to the the value list to increment their counters
-  @each $f, $v in $private-breakpoint-context-holder {
+  @each $f, $v in context.$private-breakpoint-context-holder {
     $v-holder: $v;
     $length: length($v-holder);
     @if length($v-holder) < $private-breakpoint-query-count {
       @for $i from $length to $private-breakpoint-query-count {
         @if $f == 'media' {
-          $v-holder: append($v-holder, breakpoint-get('default media'));
+          $v-holder: append($v-holder, settings.breakpoint-get('default media'));
         }
         @else {
           $v-holder: append($v-holder, false);
         }
       }
     }
-    $private-breakpoint-context-holder: map-merge($private-breakpoint-context-holder, ($f: $v-holder)) !global;
+    $private-breakpoint-context-holder: map-merge(context.$private-breakpoint-context-holder, ($f: $v-holder)) !global;
   }
 
   @return $query-print;
