--- a/stylesheets/breakpoint/_settings.scss
+++ b/stylesheets/breakpoint/_settings.scss
@@ -1,8 +1,10 @@
+@use "vars";
+
 //////////////////////////////
 // Has Setting
 //////////////////////////////
 @function breakpoint-has($setting) {
-  @if map-has-key($breakpoint, $setting) {
+  @if map-has-key(vars.$breakpoint, $setting) {
     @return true;
   }
   @else {
@@ -15,10 +17,10 @@
 //////////////////////////////
 @function breakpoint-get($setting) {
   @if breakpoint-has($setting) {
-    @return map-get($breakpoint, $setting);
+    @return map-get(vars.$breakpoint, $setting);
   }
   @else {
-    @return map-get($Breakpoint-Settings, $setting);
+    @return map-get(vars.$Breakpoint-Settings, $setting);
   }
 }
 
@@ -29,7 +31,7 @@
   @if (str-index($setting, '-') or str-index($setting, '_')) and str-index($setting, ' ') == null {
     @warn "Words in Breakpoint settings should be separated by spaces, not dashes or underscores. Please replace dashes and underscores between words with spaces. Settings will not work as expected until changed.";
   }
-  $breakpoint: map-merge($breakpoint, ($setting: $value)) !global;
+  $breakpoint: map-merge(vars.$breakpoint, ($setting: $value)) !global;
   @return true;
 }
 
@@ -57,7 +59,7 @@
   }
 
   @each $setting in $settings {
-    $breakpoint: map-remove($breakpoint, $setting) !global;
+    $breakpoint: map-remove(vars.$breakpoint, $setting) !global;
   }
   @return true;
 }
