--- a/stylesheets/breakpoint/parsers/_query.scss
+++ b/stylesheets/breakpoint/parsers/_query.scss
@@ -1,3 +1,5 @@
+@use "../helpers";
+
 @function breakpoint-parse-query($query) {
   // Parse features out of an individual query
   $feature-holder: ();
@@ -21,7 +23,7 @@
       }
 
       // If the string value can be a single value, check to see if the number passed in is a valid input for said single value. Fortunately, all current single-value options only accept unitless numbers, so this check is easy.
-      @if breakpoint-single-string($value) {
+      @if helpers.breakpoint-single-string($value) {
         @if unitless($number) {
           $feature-holder: append($value, $number, space);
           $query-holder: append($query-holder, $feature-holder, comma);
@@ -29,7 +31,7 @@
         }
       }
       // If the string is a media type, split the query
-      @if breakpoint-is-media($value) {
+      @if helpers.breakpoint-is-media($value) {
         $query-holder: append($query-holder, nth($query, 1));
         $query-holder: append($query-holder, nth($query, 2));
         @return $query-holder;
@@ -50,7 +52,7 @@
     }
     // If they're both strings and neither are singles, we roll with that.
     @else if (type-of(nth($query, 1)) == 'string' and type-of(nth($query, 2)) == 'string') {
-      @if not breakpoint-single-string(nth($query, 1)) and not breakpoint-single-string(nth($query, 2)) {
+      @if not helpers.breakpoint-single-string(nth($query, 1)) and not helpers.breakpoint-single-string(nth($query, 2)) {
         $feature-holder: append(nth($query, 1), nth($query, 2), space);
         $query-holder: append($query-holder, $feature-holder, comma);
         @return $query-holder;
@@ -61,14 +63,14 @@
     // If we've got three items and none is a list, we check to see
     @if type-of(nth($query, 1)) != 'list' and type-of(nth($query, 2)) != 'list' and type-of(nth($query, 3)) != 'list' {
       // If none of the items are single string values and none of the values are media values, we're good.
-      @if (not breakpoint-single-string(nth($query, 1)) and not breakpoint-single-string(nth($query, 2)) and not breakpoint-single-string(nth($query, 3))) and  ((not breakpoint-is-media(nth($query, 1)) and not breakpoint-is-media(nth($query, 2)) and not breakpoint-is-media(nth($query, 3)))) {
+      @if (not helpers.breakpoint-single-string(nth($query, 1)) and not helpers.breakpoint-single-string(nth($query, 2)) and not helpers.breakpoint-single-string(nth($query, 3))) and  ((not helpers.breakpoint-is-media(nth($query, 1)) and not helpers.breakpoint-is-media(nth($query, 2)) and not helpers.breakpoint-is-media(nth($query, 3)))) {
         $feature-holder: append(nth($query, 1), nth($query, 2), space);
         $feature-holder: append($feature-holder, nth($query, 3), space);
         $query-holder: append($query-holder, $feature-holder, comma);
         @return $query-holder;
       }
       // let's check to see if the first item is a media type
-      @else if breakpoint-is-media(nth($query, 1)) {
+      @else if helpers.breakpoint-is-media(nth($query, 1)) {
         $query-holder: append($query-holder, nth($query, 1));
         $feature-holder: append(nth($query, 2), nth($query, 3), space);
         $query-holder: append($query-holder, $feature-holder);
