--- a/stylesheets/breakpoint/parsers/_single.scss
+++ b/stylesheets/breakpoint/parsers/_single.scss
@@ -1,7 +1,9 @@
 //////////////////////////////
 // Import Pieces
 //////////////////////////////
-@import "single/default";
+@use "single/default";
+@use "../context";
+@use "../helpers";
 
 @function breakpoint-parse-single($feature, $empty-media, $first) {
   $parsed: '';
@@ -12,14 +14,14 @@
   }
 
   // If it's a single feature that can stand alone, we let it
-  @if (breakpoint-single-string($feature)) {
+  @if (helpers.breakpoint-single-string($feature)) {
     $parsed: $feature;
     // Set Context
-    $context-setter: private-breakpoint-set-context($feature, $feature);
+    $context-setter: context.private-breakpoint-set-context($feature, $feature);
   }
   // If it's not a stand alone feature, we pass it off to the default handler.
   @else {
-    $parsed: breakpoint-parse-default($feature);
+    $parsed: default.breakpoint-parse-default($feature);
   }
 
   @return $leader + '(' + $parsed + ')';
