--- a/stylesheets/breakpoint/parsers/double/_double-string.scss
+++ b/stylesheets/breakpoint/parsers/double/_double-string.scss
@@ -1,13 +1,16 @@
+@use "../../context";
+@use "../../helpers";
+
 @function breakpoint-parse-double-string($first, $second) {
   $feature: '';
   $value: '';
 
   // Test to see which is the feature and which is the value
-  @if (breakpoint-string-value($first) == true) {
+  @if (helpers.breakpoint-string-value($first) == true) {
     $feature: $first;
     $value: $second;
   }
-  @else if (breakpoint-string-value($second) == true) {
+  @else if (helpers.breakpoint-string-value($second) == true) {
     $feature: $second;
     $value: $first;
   }
@@ -16,7 +19,7 @@
   }
 
   // Set Context
-  $context-setter: private-breakpoint-set-context($feature, $value);
+  $context-setter: context.private-breakpoint-set-context($feature, $value);
 
   @return '(#{$feature}: #{$value})';
 }
