--- a/stylesheets/breakpoint/parsers/triple/_default.scss
+++ b/stylesheets/breakpoint/parsers/triple/_default.scss
@@ -1,3 +1,7 @@
+@use "../../context";
+@use "../../helpers";
+@use "../../settings";
+
 @function breakpoint-parse-triple-default($feature, $first, $second) {
 
   // Sort into min and max
@@ -5,13 +9,13 @@
   $max: max($first, $second);
 
   // Set Context
-  $context-setter: private-breakpoint-set-context(min-#{$feature}, $min);
-  $context-setter: private-breakpoint-set-context(max-#{$feature}, $max);
+  $context-setter: context.private-breakpoint-set-context(min-#{$feature}, $min);
+  $context-setter: context.private-breakpoint-set-context(max-#{$feature}, $max);
 
   // Make them EMs if need be
-  @if (breakpoint-get('to ems') == true) {
-    $min: breakpoint-to-base-em($min);
-    $max: breakpoint-to-base-em($max);
+  @if (settings.breakpoint-get('to ems') == true) {
+    $min: helpers.breakpoint-to-base-em($min);
+    $max: helpers.breakpoint-to-base-em($max);
   }
 
   @return '(min-#{$feature}: #{$min}) and (max-#{$feature}: #{$max})';
