--- a/tests/tests/01_pixel.scss
+++ b/tests/tests/01_pixel.scss
@@ -1,35 +1,37 @@
-@import 'variables';
+@use 'variables';
+@use '../../stylesheets/breakpoint';
+@use '../../stylesheets/breakpoint/respond-to';
 
 /*
  * Assume `default feature`
  * if only a number
- * $single-pixel-value: #{$single-pixel-value};
- * $single-em-value: #{$single-em-value};
+ * $single-pixel-value: #{variables.$single-pixel-value};
+ * $single-em-value: #{variables.$single-em-value};
  */
 .foo {
-  @include breakpoint($single-pixel-value) {
+  @include breakpoint.breakpoint(variables.$single-pixel-value) {
     content: '$single-pixel-value';
     content: '@media (min-width: 500px)';
   }
-  @include breakpoint($single-em-value) {
+  @include breakpoint.breakpoint(variables.$single-em-value) {
     content: '$single-em-value';
     content: '@media (min-width: 30em)';
   }
 
-  @include respond-to('single pixel value') {
+  @include respond-to.respond-to('single pixel value') {
     content: '$single-pixel-value';
     content: '@media (min-width: 500px)';
   }
-  @include respond-to('single pixel value, em') {
+  @include respond-to.respond-to('single pixel value, em') {
     content: '$single-em-value';
     content: '@media (min-width: 30em)';
   }
 
-  @include mq($single-pixel-value) {
+  @include breakpoint.mq(variables.$single-pixel-value) {
     content: '$single-pixel-value';
     content: '@media (min-width: 500px)';
   }
-  @include mq($single-em-value) {
+  @include breakpoint.mq(variables.$single-em-value) {
     content: '$single-em-value';
     content: '@media (min-width: 30em)';
   }
