--- a/tests/tests/07_basic_or.scss
+++ b/tests/tests/07_basic_or.scss
@@ -1,42 +1,46 @@
-@import 'variables';
+@use 'variables';
+@use '../../stylesheets/breakpoint';
+@use '../../stylesheets/breakpoint/respond-to';
+@use '../../stylesheets/breakpoint/settings';
+
 /*
  * 'OR' mediaqueries.
  * tests separated by commas
- * $basic-or : #{$basic-or};
- * $basic-or-media : #{$basic-or-media};
+ * $basic-or : #{variables.$basic-or};
+ * $basic-or-media : #{variables.$basic-or-media};
  */
 .basic-or {
-  @include breakpoint($basic-or) {
+  @include breakpoint.breakpoint(variables.$basic-or) {
     content: '$basic-or';
     content: '@media (max-width: 350px), (min-width: 500px) and (max-width: 600px)';
   }
-  @include respond-to('basic or') {
+  @include respond-to.respond-to('basic or') {
     content: '$basic-or';
     content: '@media (max-width: 350px), (min-width: 500px) and (max-width: 600px)';
   }
 }
 .basic-or-media {
-  @include breakpoint($basic-or-media) {
+  @include breakpoint.breakpoint(variables.$basic-or-media) {
     content: '$basic-or';
     content: '@media (min-width: 500px), tv and (min-width: 700px) and (color)';
   }
-  @include mq($basic-or) {
+  @include breakpoint.mq(variables.$basic-or) {
     content: '$basic-or';
     content: '@media (min-width: 500px), tv and (min-width: 700px) and (color)';
   }
-  @include respond-to('basic or') {
+  @include respond-to.respond-to('basic or') {
     content: '$basic-or';
     content: '@media (min-width: 500px), tv and (min-width: 700px) and (color)';
   }
 }
 /* @include breakpoint-set('to ems', true); */
-@include breakpoint-set('to ems', true);
+@include settings.breakpoint-set('to ems', true);
 .basic-or-to-ems {
-  @include breakpoint($basic-or) {
+  @include breakpoint.breakpoint(variables.$basic-or) {
     content: '$basic-or';
     content: '@media (min-width: 31.25em), tv and (min-width: 43.75em) and (color)';
   }
-  @include mq($basic-or) {
+  @include breakpoint.mq(variables.$basic-or) {
     content: '$basic-or';
     content: '@media (min-width: 31.25em), tv and (min-width: 43.75em) and (color)';
   }
