--- a/tests/tests/14_context_complex.scss
+++ b/tests/tests/14_context_complex.scss
@@ -1,4 +1,7 @@
-@import 'variables';
+@use 'variables';
+@use '../../stylesheets/breakpoint';
+@use '../../stylesheets/breakpoint/context';
+
 /**
  * Dynamic contexts.
  */
@@ -7,7 +10,7 @@
 #dynamic {
   // What test do we want here?
 
-  @include breakpoint($dynamic-context) {
+  @include breakpoint.breakpoint(variables.$dynamic-context) {
     // What test do we want here?
   }
 }
@@ -16,7 +19,7 @@
 $multi-media: 300px, print, 200px;
 
 #multi-media {
-  @include breakpoint($multi-media) {
-    -media:  breakpoint-get-context('media');
+  @include breakpoint.breakpoint($multi-media) {
+    -media:  context.breakpoint-get-context('media');
   }
 }
