--- a/tests/tests/17_breakpoint_function.scss
+++ b/tests/tests/17_breakpoint_function.scss
@@ -1,7 +1,8 @@
-@import "variables";
+@use 'variables';
+@use '../../stylesheets/breakpoint/parsers';
 
 @mixin breakpoint-test-query($mq) {
-  $bkpt: breakpoint($mq);
+  $bkpt: parsers.breakpoint($mq);
   _query: inspect(map-get($bkpt, 'query'));
   _fallback: inspect(map-get($bkpt, 'fallback'));
   _context-holder: inspect(map-get($bkpt, 'context holder'));
@@ -9,7 +10,7 @@
 }
 
 @mixin breakpoint-test-context($mq, $contexts) {
-  $bkpt: breakpoint($mq, $contexts);
+  $bkpt: parsers.breakpoint($mq, $contexts);
   @each $k, $v in $bkpt {
     _#{$k}: inspect($v);
   }
@@ -21,54 +22,54 @@
 **/
 .query {
   /* Single Pixel Value */
-  _test: "breakpoint(#{$single-pixel-value})";
-  @include breakpoint-test-query($single-pixel-value);
+  _test: "breakpoint(#{variables.$single-pixel-value})";
+  @include breakpoint-test-query(variables.$single-pixel-value);
   /* Fenced with Media */
-  _test: "breakpoint(#{$media-not-plus-fenced})";
-  @include breakpoint-test-query($media-not-plus-fenced);
+  _test: "breakpoint(#{variables.$media-not-plus-fenced})";
+  @include breakpoint-test-query(variables.$media-not-plus-fenced);
   /* Or Query */
-  _test: "breakpoint(#{$dynamic-context})";
-  @include breakpoint-test-query($dynamic-context);
+  _test: "breakpoint(#{variables.$dynamic-context})";
+  @include breakpoint-test-query(variables.$dynamic-context);
   /* No Query */
-  _test: "breakpoint(#{$no-query})";
-  @include breakpoint-test-query($no-query);
+  _test: "breakpoint(#{variables.$no-query})";
+  @include breakpoint-test-query(variables.$no-query);
   /* No Query, Or */
-  _test: "breakpoint(#{$legacy})";
-  @include breakpoint-test-query($legacy);
+  _test: "breakpoint(#{variables.$legacy})";
+  @include breakpoint-test-query(variables.$legacy);
 }
 
 .context {
   /* Single Pixel Value */
-  _test: "breakpoint(#{$single-pixel-value}, 'min-width')";
-  $bkpt: breakpoint($single-pixel-value, 'min-width', 'height', 'no-query');
+  _test: "breakpoint(#{variables.$single-pixel-value}, 'min-width')";
+  $bkpt: parsers.breakpoint(variables.$single-pixel-value, 'min-width', 'height', 'no-query');
   $contexts: map-get($bkpt, 'context');
   @each $k, $v in $contexts {
     _#{$k}: inspect($v);
   }
   /* Fenced with Media */
-  _test: "breakpoint(#{$media-not-plus-fenced}, 'min-width', 'max-width', 'media')";
-  $bkpt: breakpoint($media-not-plus-fenced, 'min-width', 'max-width', 'media');
+  _test: "breakpoint(#{variables.$media-not-plus-fenced}, 'min-width', 'max-width', 'media')";
+  $bkpt: parsers.breakpoint(variables.$media-not-plus-fenced, 'min-width', 'max-width', 'media');
   $contexts: map-get($bkpt, 'context');
   @each $k, $v in $contexts {
     _#{$k}: inspect($v);
   }
   /* Or Query */
-  _test: "breakpoint(#{$dynamic-context})";
-  $bkpt: breakpoint($dynamic-context, 'min-width', 'min-height', 'orientation', 'no-query');
+  _test: "breakpoint(#{variables.$dynamic-context})";
+  $bkpt: parsers.breakpoint(variables.$dynamic-context, 'min-width', 'min-height', 'orientation', 'no-query');
   $contexts: map-get($bkpt, 'context');
   @each $k, $v in $contexts {
     _#{$k}: inspect($v);
   }
   /* No Query */
-  _test: "breakpoint(#{$no-query})";
-  $bkpt: breakpoint($no-query, 'min-width', 'media', 'no-query');
+  _test: "breakpoint(#{variables.$no-query})";
+  $bkpt: parsers.breakpoint(variables.$no-query, 'min-width', 'media', 'no-query');
   $contexts: map-get($bkpt, 'context');
   @each $k, $v in $contexts {
     _#{$k}: inspect($v);
   }
   /* No Query, Or */
-  _test: "breakpoint(#{$legacy})";
-  $bkpt: breakpoint($legacy, 'min-width', 'media', 'no-query');
+  _test: "breakpoint(#{variables.$legacy})";
+  $bkpt: parsers.breakpoint(variables.$legacy, 'min-width', 'media', 'no-query');
   $contexts: map-get($bkpt, 'context');
   @each $k, $v in $contexts {
     _#{$k}: inspect($v);
